@@ -6,53 +6,51 @@ use warnings;
 use Carp 'croak';
 
 sub expand_basic_tag {
-    my ($tag_name, $tag_args) = @_;
+    my ($name, $args) = @_;
     
-    # Key
-    my $column = $tag_args->[0];
+    # Column
+    my $column = $args->[0];
     
-    # Key is not exist
-    croak("You must be pass key as argument to tag '{$tag_name }'")
+    # Check arguments
+    croak qq{Column must be specified in tag "{$name }"}
       unless $column;
     
-    # Expand
-    return ("$column $tag_name ?", [$column]);
+    return ["$column $name ?", [$column]];
 }
 
+sub expand_equal_tag              { expand_basic_tag('=', @_) }
+sub expand_not_equal_tag          { expand_basic_tag('<>', @_) }
+sub expand_greater_than_tag       { expand_basic_tag('>', @_) }
+sub expand_lower_than_tag         { expand_basic_tag('<', @_) }
+sub expand_greater_than_equal_tag { expand_basic_tag('>=', @_) }
+sub expand_lower_than_equal_tag   { expand_basic_tag('<=', @_) }
+sub expand_like_tag               { expand_basic_tag('like', @_) }
+
 sub expand_placeholder_tag {
-    my ($tag_name, $tag_args) = @_;
+    my $tag_args = shift;
     
-    # Key
+    # Column
     my $column = $tag_args->[0];
     
-    # Key is not exist
-    croak("You must be pass key as argument to tag '{$tag_name }'")
+    # Check arguments
+    croak qq{Column must be specified in tag "{? }"}
       unless $column;
     
-    # Expand
-    return ('?', [$column]);
+    return ['?', [$column]];
 }
 
 sub expand_in_tag {
-    my ($tag_name, $tag_args) = @_;
-    my ($column, $count) = @$tag_args;
+    my ($column, $count) = @{$_[0]};
     
-    # Key must be specified
-    croak("You must be pass key as first argument of tag '{in }'\n" . 
-          "Usage: {in \$key \$count}")
-      unless $column;
-    
-    # Place holder count must be specified
-    croak("You must be pass value count as second argument of tag '{in }'\n" . 
-          "Usage: {in \$key \$count}")
-      if !$count || $count =~ /\D/;
+    # Check arguments
+    croak qq{Column and count of values must be specified in tag "{in }"}
+      unless $column && $count && $count =~ /^\d+$/;
 
-    # Expand tag
-    my $expand = "$column $tag_name (";
+    # Expand
+    my $expand = "$column in (";
     for (my $i = 0; $i < $count; $i++) {
         $expand .= '?, ';
     }
-    
     $expand =~ s/, $//;
     $expand .= ')';
     
@@ -60,57 +58,34 @@ sub expand_in_tag {
     my $columns = [];
     push @$columns, $column for (0 .. $count - 1);
     
-    return ($expand, $columns);
+    return [$expand, $columns];
 }
 
 sub expand_insert_tag {
-    my ($tag_name, $columns) = @_;
+    my $columns = shift;
     
-    # Insert key (k1, k2, k3, ..)
-    my $insert_keys = '(';
+    # Insert
+    my $expand = '(';
+    $expand .= "$_, " for @$columns;
+    $expand =~ s/, $//;
+    $expand .= ') ';
+    $expand .= 'values (';
+    $expand .= "?, " for @$columns;
+    $expand =~ s/, $//;
+    $expand .= ')';
     
-    # placeholder (?, ?, ?, ..)
-    my $place_holders = '(';
-    
-    foreach my $column (@$columns) {
-        
-        # Join insert column
-        $insert_keys   .= "$column, ";
-        
-        # Join place holder
-        $place_holders .= "?, ";
-    }
-    
-    # Delete last ', '
-    $insert_keys =~ s/, $//;
-    
-    # Close 
-    $insert_keys .= ')';
-    $place_holders =~ s/, $//;
-    $place_holders .= ')';
-    
-    # Expand tag
-    my $expand = "$insert_keys values $place_holders";
-    
-    return ($expand, [@$columns]);
+    return [$expand, [@$columns]];
 }
 
 sub expand_update_tag {
-    my ($tag_name, $columns) = @_;
+    my $columns = shift;
     
-    # Expanded tag
+    # Update
     my $expand = 'set ';
-    
-    foreach my $column (@$columns) {
-
-        # Join key and placeholder
-        $expand .= "$column = ?, ";
-    }
-    
-    # Delete last ', '
+    $expand .= "$_ = ?, " for @$columns;
     $expand =~ s/, $//;
     
-    return ($expand, [@$columns]);
+    return [$expand, [@$columns]];
 }
 
 1;
@@ -122,6 +97,20 @@ DBIx::Custom::SQLBuilder::TagProcessors - Tag processor
 =head1 FUNCTIONS
 
 =head2 C<expand_basic_tag>
+
+=head2 C<expand_equal_tag>
+
+=head2 C<expand_not_equal_tag>
+
+=head2 C<expand_greater_than_tag>
+
+=head2 C<expand_lower_than_tag>
+
+=head2 C<expand_greater_than_equal_tag>
+
+=head2 C<expand_lower_than_equal_tag>
+
+=head2 C<expand_like_tag>
 
 =head2 C<expand_in_tag>
 
